fix positioning of player bar and album so they do not overlap

--- a/src/App.css
+++ b/src/App.css
@@ -162,13 +162,16 @@ p {
   font-family: Arial;
   background-color: white;
   border-radius: 50px;
-  width:500px;
+  width:350px;
+  margin-bottom: 100px;
+  margin-top:0;
   border-style: solid outset;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.6);
 }
 
 .center {
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
     padding: 10px;
 }
 
@@ -191,9 +194,9 @@ label {
     display: block;
     width: 500px;
     height: 500px;
-    position: absolute;
-    left: 50%;
-    top: 75%;
+    margin-top:300px;
+    margin-left: 50%;
+    margin-bottom: 0;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     cursor: pointer;
